saving before trying some new profile boxes

--- a/team-member.html
+++ b/team-member.html
@@ -36,7 +36,7 @@
                   <ul class="list-inline">
                     <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
-                    <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
+                    <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>                 
                   </ul>
                 </div>
@@ -134,28 +134,42 @@
                         </div>
                         <div class="offset-top-20">
                           <ul class="list-inline list-inline-xs">
-                            <li><a href="#" class="icon icon-xxs icon-circle icon-white fa-facebook"></a></li>
-                            <li><a href="#" class="icon icon-xxs icon-circle icon-white fa-twitter"></a></li>
-                            <li><a href="#" class="icon icon-xxs icon-circle icon-white fa-linkedin"></a></li>  
+                            <li><a href="#" class="icon icon-xxs icon-circle fa-facebook"></a></li>
+                            <li><a href="#" class="icon icon-xxs icon-circle fa-twitter"></a></li>
+                            <li><a href="#" class="icon icon-xxs icon-circle fa-linkedin"></a></li>  
                           </ul>
                         </div>
                       </div>
                     </div>
                     <div class="inset-md-right-20 offset-top-20 darktransparent">
                       <h5 class="text-left offset-top-20">Specialty</h5>
-                      <p>Cosmetic Facial Plastic and Reconstructive Surgery Rejuvenation of the Aging Face Facelift, Eyelid Surgery Rhinoplasty Chin Implant Otoplasty (Ear pinning)</p>
+                      <ul class="biolist">
+                        <li>Cosmetic Facial Plastic and Reconstructive Surgery</li>
+                        <li>Rejuvenation of the Aging Face Facelift</li>
+                        <li>Eyelid Surgery</li>
+                        <li>Rhinoplasty</li>
+                        <li>Chin Implant</li>
+                        <li>Otoplasty (Ear pinning)</li>
+                      </ul>
                       <h5 class="text-left offset-top-20">Medical Licensure</h5>
-                      <p>Massachusetts</p> 
-                      <p>New Hampshire</p>
+                      <ul class="biolist">
+                        <li>Massachusetts</li>
+                        <li>New Hampshire</li>
+                      </ul>
                       <h5 class="text-left offset-top-20">Professional Affiliations</h5>
-                      <p>Associate Staff Massachusetts Eye & Ear Infirmary 
-                            Jul. 2008 - Present</p> 
-                      <p>Clinical Instructor Harvard Medical School 
-                            Oct. 2009 - Present</p>
-                      <p>Courtesy Staff Boston Center for Plastic Surgery 
-                            Sep. 2008 - Present</p>
+                      <ul class="biolist">
+                        <li>Associate Staff Massachusetts Eye & Ear Infirmary 
+                            Jul. 2008 - Present</li>
+                        <li>Clinical Instructor Harvard Medical School 
+                            Oct. 2009 - Present</li>
+                        <li>Courtesy Staff Boston Center for Plastic Surgery 
+                            Sep. 2008 - Present</li>
+                      </ul>
                       <h5 class="text-left offset-top-20">Languages</h5>
-                      <p>English, Spanish</p>
+                      <ul class="biolist">
+                        <li>English</li>
+                        <li>Spanish</li>
+                      </ul>
                       <h5 class="text-left offset-top-20">certificates</h5>
                       <div class="range range-xs-center range-sm-left offset-top-24">
                         <div class="cell-xs-8 cell-sm-4"><a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
@@ -184,35 +198,35 @@
                   <div class="cell-xs-10 text-md-left offset-top-20 offset-md-top-0 col-md-8">
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">The Heart of Medical Center</h5>
-                      <p>Dr. Scott Riley's passion is helping people to enhance their own natural looks, a passion he pursues as one of the leading plastic surgeons in the San Diego area. Specializing in plastic surgery as well as in cosmetic and reconstructive breast surgery and body contouring procedures, Dr. Riley spearheaded the establishment of a regional plastic surgery practice that serves our city and the surrounding area with excellence and efficiency.<br><br>His impressive medical education and advanced surgical training established the foundation of his successful plastic surgery practice. A San Francisco native, Dr. Riley completed his undergraduate science degree at San Diego's University after moving here in 1985. He earned his medical degree from the University of Los Angeles, where he also completed his plastic surgery residency. He is highly valued in the community of plastic and </p>
+                      <p class="offset-top-20">Dr. Scott Riley's passion is helping people to enhance their own natural looks, a passion he pursues as one of the leading plastic surgeons in the San Diego area. Specializing in plastic surgery as well as in cosmetic and reconstructive breast surgery and body contouring procedures, Dr. Riley spearheaded the establishment of a regional plastic surgery practice that serves our city and the surrounding area with excellence and efficiency.<br><br>His impressive medical education and advanced surgical training established the foundation of his successful plastic surgery practice. A San Francisco native, Dr. Riley completed his undergraduate science degree at San Diego's University after moving here in 1985. He earned his medical degree from the University of Los Angeles, where he also completed his plastic surgery residency. He is highly valued in the community of plastic and </p>
                     </div> 
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">Education</h5>
-                      <p> Jul 2007 - Jun 2008 Facial Plastics and Reconstructive Surgery Fellowship Calvin Johnson, MD. Hedgewood Surgical Center - Tulane University | Fellowship<br><br>
-
-                          Jun 2001 - Jun 2006 Head & Neck Surgery Residency - Tufts Medical Center | Residency<br><br>
-
-                          Jul 2007 - Jun 2008 Facial Plastics and Reconstructive Surgery Fellowship Calvin Johnson, MD. Hedgewood Surgical Center - Tulane University | Fellowship<br><br>
-
-                          Jun 2001 - Jun 2006 Head & Neck Surgery Residency - Tufts Medical Center | Residency</p>
+                      <ul class="biolist-main offset-top-20">
+                        <li>Jul 2007 - Jun 2008 Facial Plastics and Reconstructive Surgery Fellowship Calvin Johnson, MD. Hedgewood Surgical Center - Tulane University | Fellowship</li>
+                        <li>Jun 2001 - Jun 2006 Head & Neck Surgery Residency - Tufts Medical Center | Residency</li>
+                        <li>Jul 2007 - Jun 2008 Facial Plastics and Reconstructive Surgery Fellowship Calvin Johnson, MD. Hedgewood Surgical Center - Tulane University | Fellowship</li>
+                        <li>Jun 2001 - Jun 2006 Head & Neck Surgery Residency - Tufts Medical Center | Residency</li>
+                        <li>Jul 2007 - Jun 2008 Facial Plastics and Reconstructive Surgery Fellowship Calvin Johnson, MD. Hedgewood Surgical Center - Tulane University | Fellowship</li>
+                        <li>Jun 2001 - Jun 2006 Head & Neck Surgery Residency - Tufts Medical Center | Residency</li>
+                        <li>Jul 2007 - Jun 2008 Facial Plastics and Reconstructive Surgery Fellowship Calvin Johnson, MD. Hedgewood Surgical Center - Tulane University | Fellowship</li>
+                        <li>Jun 2001 - Jun 2006 Head & Neck Surgery Residency - Tufts Medical Center | Residency</li>
+                      </ul>
                     </div> 
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">Additional Experience</h5>
-                      <p>Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006 <br><br>
-
-                        Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010<br><br>
-
-                        Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006<br><br>
-
-                        Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010<br><br>
-
-                        Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006<br><br>
-
-                        Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010<br><br>
-
-                        Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006<br><br>
-
-                        Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010</p>
+                      <ul class="biolist-main offset-top-20">
+                        <li>Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006 </li>
+                        <li>Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010</li>
+                        <li>Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006 </li>
+                        <li>Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010</li>
+                        <li>Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006 </li>
+                        <li>Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010</li>
+                        <li>Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006 </li>
+                        <li>Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010</li>
+                        <li>Award | Collin Karmody Resident Achievement Award In recognition of Outstanding Research Achievement in Otolaryngology-HNS Jun 2006 </li>
+                        <li>Award | Membership and Residency Relations Committee (Committee member) American Academy of Facial Plastic and Reconstructive Surgery 2006 - 2010</li>
+                      </ul>
                     </div>     
                   </div> 
               </div>
@@ -263,7 +277,7 @@
                     <section class="post-content text-left">
                       <!-- Post Title-->
                       <div class="post-title offset-top-8">
-                        <h4 class="text-bold"><a href="s#.html">Why laser skin rejuvenation needs to be on your to-do list</a></h4>
+                        <h4 class="text-bold"><a href="#.html">Why laser skin rejuvenation needs to be on your to-do list</a></h4>
                       </div>
                       <ul class="list-inline list-inline-dashed">
                         <li>June 21, 2016</li>
@@ -321,7 +335,7 @@
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
-                <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-darker"></a></li>                 
               </ul>
             </div>
@@ -338,8 +352,6 @@
                 <li><a href="testimonials.html">Testimonials</a>
                 </li>
                 <li><a href="costs.html">Costs</a>
-                </li>
-                <li><a href="appointments.html">Appointments</a>
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
