--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                   <ul class="list-inline">
                     <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
-                    <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
+                    <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>                 
                   </ul>
                 </div>
@@ -168,36 +168,11 @@
           </div>
         </section>
         <!--What makes us different-->
-        <section class="section-50">
+        <section class="section-66">
           <div class="shell">
-            <div class="offset-top-0 text-left">
-              <h5 class="text-center">Awards</h5>
-              <div class="row offset-top-20">
-                <div class="col-md-3">
-                  <img src="images/certifications/certificate-01-700x970.jpg" class="img-responsive">
-                  <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="col-md-3">
-                  <img src="images/certifications/certificate-01-700x970.jpg" class="img-responsive">
-                  <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="col-md-3">
-                  <img src="images/certifications/certificate-01-700x970.jpg" class="img-responsive">
-                  <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="col-md-3">
-                  <img src="images/certifications/certificate-01-700x970.jpg" class="img-responsive">
-                  <p class="offset-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="rdparallax">
-          <div class="rdparallaxlayer section-66 section-sm-66">
-            <div class="shell">
+            <h5 class="text-center">Our Team</h5>
               <div class="row">
-                <div class="col-md-4 offset-top-30">
+                <div class="col-md-4 offset-top-41">
                   <img class="img-responsive team-member" src="images/pages/our-team-07-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
@@ -212,7 +187,7 @@
                     <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
-                <div class="col-md-4 offset-top-30">
+                <div class="col-md-4 offset-top-41">
                   <img class="img-responsive team-member" src="images/pages/our-team-08-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
@@ -227,7 +202,7 @@
                     <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                   </div>
                 </div>
-                <div class="col-md-4 offset-top-30">
+                <div class="col-md-4 offset-top-41">
                   <img class="img-responsive team-member" src="images/pages/our-team-09-384x410.jpg">
                   <div class="lighttransparent offset-top-20">
                     <h5>Ricky Baker</h5>
@@ -243,6 +218,37 @@
                   </div>
                 </div>
               </div>
+          </div>
+        </section>
+        <section class="rdparallax">
+          <div class="rdparallaxlayer section-66 section-sm-66">
+            <div class="shell">
+              <div class="row certifications">
+                <div class="col-md-3 col-sm-3 col-xs-6 certification">
+                  <a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                    <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                    </figure>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-6 certification">
+                  <a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                    <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                    </figure>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-6 certification">
+                  <a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                    <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                    </figure>
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-6 certification">
+                  <a class="thumbnail-classic" data-photo-swipe-item="" data-size="700x970" href="images/certifications/certificate-01-700x970.jpg">
+                    <figure><img width="100" height="138" src="images/certifications/certificate-01-100x138.jpg" alt=""/>
+                    </figure>
+                  </a>
+                </div>
+              </div>
             </div> 
           </div>
         </section>
@@ -256,7 +262,7 @@
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
-                <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-darker"></a></li>                 
               </ul>
             </div>
@@ -273,8 +279,6 @@
                 <li><a href="testimonials.html">Testimonials</a>
                 </li>
                 <li><a href="costs.html">Costs</a>
-                </li>
-                <li><a href="appointments.html">Appointments</a>
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
