--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
                   <ul class="list-inline">
                     <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
-                    <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
+                    <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>                 
                   </ul>
                 </div>
@@ -199,8 +199,8 @@
               <div class="cell-xs-10 text-md-left offset-md-top-0 col-md-6">
                 <img class ="img-responsive" src="images/gallery/building.jpg">
               </div>
-              <div class="cell-xs-10 text-md-left offset-top-20 offset-md-top-0 col-md-6">
-                <h5 class="offset-top-20">Office Hours</h5>
+              <div class="cell-xs-10 text-md-left offset-top-mobile-20 col-md-6">
+                <h5>Office Hours</h5>
                 <div class="offset-top-30 text-left">
                   <h6>Mon–Fri: 8:00am–6:00pm</h6>
                   <h6>Sat: 9:00am–3:00pm</h6>
@@ -229,7 +229,7 @@
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
-                <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-darker"></a></li>                 
               </ul>
             </div>
@@ -246,8 +246,6 @@
                 <li><a href="testimonials.html">Testimonials</a>
                 </li>
                 <li><a href="costs.html">Costs</a>
-                </li>
-                <li><a href="appointments.html">Appointments</a>
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
