--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <ul class="list-inline">
                     <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
-                    <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
+                    <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>                 
                   </ul>
                 </div>
@@ -279,7 +279,7 @@
           </div>
         </section>
         <!--What makes us different-->
-        <section class="section-50">
+        <section class="section-66 section-bottom-85">
           <div class="shell">
             <div class="offset-top-0 text-left">
               <h5>Meet your Doctor</h5>
@@ -295,10 +295,12 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
                     <h6><a href="">Read More »</a></h6>
                   </div>
                 </div>
-                <div class="col-md-12 offset-top-60 shell advert" style="background-image: url(images/backgrounds/implants.jpg);">
-                   <h5 style="font-weight:500;">Breast Augmentation</h5>
-                   <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
-                   <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                <div class="col-md-12 offset-top-50">
+                  <div class="shell advert" style="background-image: url(images/backgrounds/implants.jpg);">
+                     <h5 style="font-weight:500;">Breast Augmentation</h5>
+                     <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
+                     <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -314,7 +316,7 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
-                <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-darker"></a></li>                 
               </ul>
             </div>
@@ -331,8 +333,6 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
                 <li><a href="testimonials.html">Testimonials</a>
                 </li>
                 <li><a href="costs.html">Costs</a>
-                </li>
-                <li><a href="appointments.html">Appointments</a>
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
