--- a/procedure.html
+++ b/procedure.html
@@ -36,7 +36,7 @@
                   <ul class="list-inline">
                     <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
-                    <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
+                    <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
                     <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>                 
                   </ul>
                 </div>
@@ -278,7 +278,7 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
-                <li><a href="http://instagram.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
+                <li><a href="http://plus.google.com" class="icon fa fa-google-plus icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-darker"></a></li>                 
               </ul>
             </div>
@@ -295,8 +295,6 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
                 <li><a href="testimonials.html">Testimonials</a>
                 </li>
                 <li><a href="costs.html">Costs</a>
-                </li>
-                <li><a href="appointments.html">Appointments</a>
                 </li>      
                 <li><a href="contacts.html">Contacts</a>
                 </li>
